--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,9 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
-    --border: 0 0% 89.8%;
+    /*--border: 0 0% 89.8%;*/
+    --border: 0 0% 69.8%;
+
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
 
@@ -37,7 +39,7 @@
     --beats: 0 0% 100%;
 
     /*my own stuff */
-    --boomchuck: 41, 100%, 56%;
+    --boomchuck: 41, 100%, 86%;
   }
 
   .dark {
