--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,9 +10,9 @@
     --card-foreground: 20 14.3% 4.1%;
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
-    --primary: 24 9.8% 10%;
-    --primary-foreground: 60 9.1% 97.8%;
-    --secondary: 60 4.8% 95.9%;
+    --primary: 32 96.7% 44.5%;
+    --primary-foreground: 20 14.3% 4.1%;
+    --secondary: 60 4.8% 90.9%;
     --secondary-foreground: 24 9.8% 10%;
     --muted: 60 4.8% 95.9%;
     --muted-foreground: 25 5.3% 44.7%;
@@ -62,6 +62,9 @@
 }
 
 @layer base {
+  body {
+    @apply font-sans;
+  }
   * {
     @apply border-border;
   }
